# Paraglob-2

./: .gitignore  AhoCorasickPlus.cpp  CMakeCache.txt  CMakeLists.txt  COPYING  Makefile  README.md  aho_corasick.hpp  benchmark.cpp  build_instructions.txt  cmake_install.cmake  driver.c  driver.cpp  paraglob  paraglob.c  paraglob.cpp  paraglob.h  setBench  setBenchmark.c  setBenchmark.cpp  setTest  vectorBench  vectorBenchmark.cpp
acBenchmarking/: a.out  acBenchmark.cpp  bench  todonotes.txt
acBenchmarking/sfutil/: acsmx2.c  bnfa_search.c  sf_types.h  snort.h  snort_debug.h
ahocorasick/: Makefile  cmake_install.cmake
multifast-ac/ahocorasick/: Makefile
multifast-ac/examples/example3/: example3
src/: cmake_install.cmake  paraglob.cpp  paraglob.h  paraglobNode.h
testing/.tmp/driver.basic_matches/: .diag  out
testing/.tmp/driver.empty_patterns/: .diag  out
testing/.tmp/driver.time/: .diag  out
testing/driver/: time
tools/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  driver.cpp  paraglob-test  paraglob.tools  test.ros
